fix: make black sections full-width on mobile view

--- a/style.css
+++ b/style.css
@@ -604,4 +604,13 @@ footer p {
     flex-direction: column;
     gap: 2rem !important;
   }
+  
+  .container-black, .container-green, #register-hero, #login-hero {
+    border-radius: 0 !important;
+    margin-left: -1.5rem !important;
+    margin-right: -1.5rem !important;
+    width: calc(100% + 3rem) !important;
+    border-left: none !important;
+    border-right: none !important;
+  }
 }
